minimum window size is now fixed so that all items can be seen at all times (with scrolling if the window is not big enough). fixed the way items align, specifically how the position of the aside tags in the documentView.gohtml are handled. -v1.0.0

--- a/public/style.css
+++ b/public/style.css
@@ -7,13 +7,16 @@
 
 
 body {
+    box-sizing: border-box;
     background-color: rgb(30 41 59);
     color: var(--text-color);
     flex-direction: column;
     align-items: center;
     display: flex;
     max-width: 100vw;
-    margin-top: 0;
+    min-width: 95rem;
+    margin: 0;
+    padding: 0 8px 8px;
 }
 
 header.page-header {
@@ -30,8 +33,9 @@ div.block-view {
     flex-direction: inherit;
     align-items: start;
     display: inherit;
+    min-width: var(--standard-width);
     width: var(--standard-width);
-    max-width: 100vw;
+    max-width: 100%;
     h1 {
         word-break: break-word;
     }
@@ -48,6 +52,7 @@ div.wrapper {
     flex-direction: inherit;
     align-items: inherit;
     display: inherit;
+    min-width: fit-content;
     width: inherit;
     max-width: inherit;
 }
@@ -63,8 +68,9 @@ form {
     flex-direction: column;
     align-items: start;
     display: flex;
+    min-width: var(--standard-width);
     width: var(--standard-width);
-    max-width: 100vw;
+    max-width: 100%;
     > details.advanced-search {
         flex-direction: inherit;
         align-items: inherit;
@@ -224,7 +230,8 @@ a.dropdown {
 }
 
 div.note {
-    max-width: 100vw;
+    max-width: 100%;
+    min-width: var(--standard-width);
     width: var(--standard-width);
     a:not(.markdown a) {
         box-sizing:border-box;
@@ -293,8 +300,9 @@ div.pager {
 
 div.hierarchy-view {
     box-sizing:border-box;
+    min-width: var(--standard-width);
     width: var(--standard-width);
-    max-width: 100vw;
+    max-width: 100%;
     word-break: break-word;
     align-items: start;
     a {
@@ -382,8 +390,8 @@ h1.big-header {
 
 div.aside-tags {
     position: absolute;
-    top: 12rem;
-    left: calc(50vw + 2rem + (var(--standard-width) / 2));
+    top: 6rem;
+    left: calc(2rem + var(--standard-width));
     width: var(--standard-small-width);
 }
 
@@ -403,7 +411,7 @@ div.tag-holder {
 }
 
 hr.splitter {
-    width: var(--standard-width);
+    min-width: var(--standard-width);
     margin: 0.3rem 0;
 }
 
@@ -443,8 +451,9 @@ table.view-vote {
     }
     > div#chat-room {
         > div#message {
+            min-width: var(--standard-width);
             width: var(--standard-width);
-            max-width: 100vw;
+            max-width: 100%;
             filter: drop-shadow(0.3rem 0.3rem 0.125rem rgb(2 6 23));
             padding: 0.6rem;
             margin: 0.5rem 0;
@@ -491,8 +500,9 @@ span.message {
 
 div.markdown {
     box-sizing:border-box;
+    min-width: var(--standard-width);
     width: var(--standard-width);
-    max-width: 100vw;
+    max-width: 100%;
     background-color: rgb(15 23 42);
     filter: drop-shadow(0.3rem 0.3rem 0.125rem rgb(2 6 23));
     padding: 1rem;
